<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StatisticsFragment">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/average_step_count_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average_step_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/average_step_count_label"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/total_step_count_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_step_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total_step_count_label"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/goal_completion_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/longest_streak_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/longest_streak_label"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/most_active_day_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/current_streak_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/current_streak_label"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/longest_streak_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/most_active_day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/most_active_day_label"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/records_start_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/goal_completion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/goal_completion_label"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/current_streak_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/average_step_count_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/total_step_count_display"
        app:layout_constraintStart_toEndOf="@+id/goal_completion_label" />

    <TextView
        android:id="@+id/total_step_count_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/goal_completion_display"
        app:layout_constraintStart_toEndOf="@+id/goal_completion_label" />

    <TextView
        android:id="@+id/goal_completion_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/current_streak_display"
        app:layout_constraintStart_toEndOf="@+id/goal_completion_label" />

    <TextView
        android:id="@+id/current_streak_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/longest_streak_display"
        app:layout_constraintStart_toEndOf="@+id/goal_completion_label" />

    <TextView
        android:id="@+id/longest_streak_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/most_active_day_display"
        app:layout_constraintStart_toEndOf="@+id/goal_completion_label" />

    <TextView
        android:id="@+id/most_active_day_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/records_start_display"
        app:layout_constraintStart_toEndOf="@+id/goal_completion_label" />

    <TextView
        android:id="@+id/records_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/records_start_label"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/records_start_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goal_completion_label" />

</android.support.constraint.ConstraintLayout>